--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,36 @@
 node_modules/
 /.pnp
 .pnp.js
+
+# Production builds
+/out/
+/build
+/.next/
+
+# Environment variables
+.env*
+!.env.example
+
+# Debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Local env files
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Vercel
+.vercel
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS
+.DS_Store
+Thumbs.db
